**** Так же добавлены дополнительные проверки. ** Добавил функционал взаимодействия с модулем атематической загрузки сборок в хранилище платформ

--- a/web_hendler/.env
+++ b/web_hendler/.env
@@ -21,3 +21,9 @@ GIT_CLONE_PATH=git@github.com:BeliVR-Game/karga.git
 TEST_MODE=false
 
 PATH_PROJECT='C:\\Unity\\clone_3'
+
+PICO_APP_ID="f72c27fd8d4c7245bb3dd9b140b159be"
+PICO_APP_SECRET="e1a73539a07d9bba90114aa802075212"
+
+OCULUS_APP_ID="5624606340920620"
+OCULUS_APP_SECRET="0731908d612ba7884f1a85fa7669c248"
