ADD BOT FUNCTION

--- a/web_hendler/.env
+++ b/web_hendler/.env
@@ -3,6 +3,9 @@ PORT=:8080
 PROD_PORT=:8080
 DEV_PORT=:8888
 
+BOT_URL="http://localhost"
+BOT_PORT="9595"
+
 KEYSTORE_PASS="qwertyui"
 KEY_ALIAS_NAME="karga"
 KEY_ALIAS_PASS="qwertyui"
