--- a/uploader/.env
+++ b/uploader/.env
@@ -10,8 +10,8 @@ KEYSTORE_PASS="qwertyui"
 KEY_ALIAS_NAME="karga"
 KEY_ALIAS_PASS="qwertyui"
 
-PATH_OCULUS_TOOLS='G:\\project\\BeliVR\\!tools\\ovr-platform-util.exe'
-PATH_PICO_TOOLS='G:\\project\\BeliVR\\!tools\\pico-cli.exe'
+PATH_OCULUS_TOOLS='G:\\project\\BeliVR\\building_server\\uploader\\cli\\ovr-platform-util.exe'
+PATH_PICO_TOOLS='G:\\project\\BeliVR\\building_server\\uploader\\cli\\pico-cli.exe'
 
 PATH_UNITY_EDITOR='C:\\Program Files\\Unity\\Hub\\Editor\\2022.1.23f1\\Editor\\Unity.exe'
 PATH_TO_FOLDER_FOR_PROJECT='C:\\Unity\\clone'
