--- a/web_hendler/.env
+++ b/web_hendler/.env
@@ -1,4 +1,3 @@
-
 PORT=:8080
 PROD_PORT=:8080
 DEV_PORT=:8888
@@ -6,12 +5,15 @@ DEV_PORT=:8888
 BOT_URL="http://localhost"
 BOT_PORT="9595"
 
+PATH_STORE_KEYSTORE='C:\\Unity'
+
+KEYSTORE_NAME='karga.keystore'
 KEYSTORE_PASS="qwertyui"
 KEY_ALIAS_NAME="karga"
 KEY_ALIAS_PASS="qwertyui"
 
-PATH_OCULUS_TOOLS='G:\\project\\BeliVR\\!tools\\ovr-platform-util.exe'
-PATH_PICO_TOOLS='G:\\project\\BeliVR\\!tools\\pico-cli.exe'
+PATH_OCULUS_TOOLS='G:\\project\\BeliVR\\building_server\\uploader\\cli\\ovr-platform-util.exe'
+PATH_PICO_TOOLS='G:\\project\\BeliVR\\building_server\\uploader\\cli\\pico-cli.exe'
 
 PATH_UNITY_EDITOR='C:\\Program Files\\Unity\\Hub\\Editor\\2022.1.23f1\\Editor\\Unity.exe'
 PATH_TO_FOLDER_FOR_PROJECT='C:\\Unity\\clone'
@@ -24,11 +26,13 @@ GIT_CLONE_PATH=git@github.com:BeliVR-Game/karga.git
 TEST_MODE=false
 
 PATH_PROJECT='C:\\Unity\\clone_3'
+PATH_ASSETS_FOLDER='G:\\project\\BeliVR\\building_server\\dist\\assets'
 
-PATH_BUILDER_MOD=
-PATH_GIT_MOD=
-PATH_PREBUILD_MOD=
-PATH_UPLOADER_MOD=
+
+PATH_BUILDER_MOD='G:\\project\\BeliVR\\building_server\\dist\\builder.exe'
+PATH_GIT_MOD='G:\\project\\BeliVR\\building_server\\dist\\git_runner.exe'
+PATH_PREBUILD_MOD='G:\\project\\BeliVR\\building_server\\dist\\pre_builder.exe'
+PATH_UPLOADER_MOD='G:\\project\\BeliVR\\building_server\\dist\\uploader.exe'
 
 
 PICO_APP_ID="f72c27fd8d4c7245bb3dd9b140b159be"
