--- a/web_hendler/.env
+++ b/web_hendler/.env
@@ -16,7 +16,7 @@ PATH_OCULUS_TOOLS='G:\\project\\BeliVR\\building_server\\uploader\\cli\\ovr-plat
 PATH_PICO_TOOLS='G:\\project\\BeliVR\\building_server\\uploader\\cli\\pico-cli.exe'
 
 PATH_UNITY_EDITOR='C:\\Program Files\\Unity\\Hub\\Editor\\2022.1.23f1\\Editor\\Unity.exe'
-PATH_TO_FOLDER_FOR_PROJECT='C:\\Unity\\clone'
+PATH_TO_FOLDER_FOR_PROJECT='C:\\Unity\\clone_3'
 
 UNITY_ARGS="-quit"
 OCULUS_ARGS=version
