Обновил логику проверки полученныйх данных из переменных серды, необходимых для запуска сервера.

--- a/web_hendler/.env
+++ b/web_hendler/.env
@@ -18,15 +18,11 @@ PATH_PICO_TOOLS='G:\\project\\BeliVR\\building_server\\uploader\\cli\\pico-cli.e
 PATH_UNITY_EDITOR='C:\\Program Files\\Unity\\Hub\\Editor\\2022.1.23f1\\Editor\\Unity.exe'
 PATH_TO_FOLDER_FOR_PROJECT='C:\\Unity\\clone_3'
 
-UNITY_ARGS="-quit"
-OCULUS_ARGS=version
-PICO_ARGS=version
-
-GIT_CLONE_PATH=git@github.com:BeliVR-Game/karga.git
-TEST_MODE=false
-
 PATH_PROJECT='C:\\Unity\\clone_3'
 PATH_ASSETS_FOLDER='G:\\project\\BeliVR\\building_server\\dist\\assets'
+PATH_TO_LOGS='C:\\Unity\\logs\\logs_'
+PATH_TO_ANDROID_BUILD_FOLDER='C:\\Unity\\build\\Build_'
+PATH_TO_EDITOR='C:\\Program Files\\Unity\\Hub\\Editor\\2022.1.23f1\\Editor\\Unity.exe'
 
 
 PATH_BUILDER_MOD='G:\\project\\BeliVR\\building_server\\dist\\builder.exe'
