--- a/web_hendler/.env
+++ b/web_hendler/.env
@@ -21,7 +21,7 @@ PATH_TO_FOLDER_FOR_PROJECT='C:\\Unity\\clone_3'
 PATH_PROJECT='C:\\Unity\\clone_3'
 PATH_ASSETS_FOLDER='G:\\project\\BeliVR\\building_server\\dist\\assets'
 PATH_TO_LOGS='C:\\Unity\\logs\\logs_'
-PATH_TO_ANDROID_BUILD_FOLDER='C:\\Unity\\build\\Build_'
+PATH_TO_ANDROID_BUILD_FOLDER='C:\\Unity\\build'
 PATH_TO_EDITOR='C:\\Program Files\\Unity\\Hub\\Editor\\2022.1.23f1\\Editor\\Unity.exe'
 
 
